--- a/style/style.css
+++ b/style/style.css
@@ -7,9 +7,25 @@
     font-family: 'Poppins', sans-serif;
 }
 
+:root {
+    --main-color: #d90429;
+    --text-color: #020102;
+    --bg-color: #fff;
+}
+
 body {
     background: #fff;
 
+}
+
+.logo {
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: var(--text-color);
+}
+
+.logo span {
+    color: var(--main-color);
 }
 
 .container {
