--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ html::-webkit-scrollbar {
 }
 
 html::-webkit-scrollbar-thumb {
-  border-radius: 5rem;
+  border-radius: 5px;
   background: var(--text-color);
 }
 
 section {
-  padding: 4rem 0 2rem;
+  padding: 4px 0 2px;
 }
 
 img {
@@ -67,9 +67,6 @@ header.shadow {
   transition: 0.5s ease;
 }
 
-header.shadow #search-icon {
-  color: var(--text-color);
-}
 
 .nav {
   background-color: #fff;
@@ -100,7 +97,7 @@ header.shadow #search-icon {
 
 .navbar {
   display: flex;
-  column-gap: 2rem;
+  column-gap: 30px;
 }
 
 .navbar a {
@@ -116,36 +113,6 @@ header.shadow #search-icon {
   border-bottom: 3px solid var(--main-color);
 }
 
-#search-icon {
-  font-size: 24px;
-  cursor: pointer;
-  color: var(--bg-color);
-}
-
-.search-box {
-  position: absolute;
-  top: 110%;
-  right: 0;
-  left: 0;
-  background: var(--bg-color);
-  box-shadow: 4px 4px 20px rgb(15, 54, 55 / 10%);
-  border: 1px solid var(--main-color);
-  border-radius: 0.5rem;
-  clip-path: circle(0% at 100% 0%);
-}
-
-.search-box.active {
-  clip-path: circle(144% at 100% 0%);
-}
-
-.search-box input {
-  width: 100%;
-  padding: 20px;
-  border: none;
-  outline: none;
-  background: transparent;
-  font-size: 1rem;
-}
 
 .home {
   max-width: 1300px;
@@ -211,77 +178,6 @@ header.shadow #search-icon {
   font-weight: 300;
 }
 
-.cars-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  margin-top: 2rem;
-}
-
-.cars-container .box {
-  flex: 1 1 17rem;
-  position: relative;
-  height: 200px;
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
-
-.cars-container .box img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  overflow: hidden;
-}
-
-.cars-container .box img:hover {
-  transform: scale(1.1);
-  transition: 0.5s;
-}
-
-.cars-container .box h2 {
-  position: absolute;
-  bottom: 1rem;
-  left: 1rem;
-  font-weight: 400;
-  font-size: 1rem;
-  background: var(--bg-color);
-  padding: 8px;
-  border-radius: 0.5rem;
-}
-
-.cars-container .box:hover h2 {
-  background: var(--main-color);
-  color: var(--bg-color);
-}
-
-.about {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 1.5rem;
-}
-
-.about-img {
-  flex: 1 1 21rem;
-}
-
-.about-text {
-  flex: 1 1 21rem;
-}
-
-.about-text span {
-  font-weight: 500;
-  color: var(--main-color);
-}
-
-.about-text h2 {
-  font-size: 1.7rem;
-}
-
-.about-text p {
-  font-size: 00.938rem;
-  margin: 0.5rem 0 1.4rem;
-}
 
 .parts-container {
   display: flex;
